// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TechnicalSpecificationLeadBlock tests should render correctly when Multiple classifications provided With more than one feature units 1`] = `
<div>
  <div
    class="MuiGrid-root LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div
            class="accordionStyles-root-8 accordionStyles-no-inner-padding-11"
          >
            <div
              class="MuiPaper-root MuiAccordion-root accordionStyles-item-9 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-12 Mui-expanded accordionStyles-summaryExpanded-13"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content accordionStyles-summaryContent-14 Mui-expanded accordionStyles-summaryExpanded-13"
                >
                  <h6
                    class="MuiTypography-root Typography MuiTypography-h6"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded accordionStyles-summaryExpanded-13 MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-entered"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details"
                      >
                        <div>
                          <table
                            class="MuiTable-root Table Table--row-even-color Table--no-border"
                          >
                            <tbody
                              class="MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200 in
                                </td>
                              </tr>
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200 in
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiAccordion-root accordionStyles-item-9 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-12 Mui-expanded accordionStyles-summaryExpanded-13"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content accordionStyles-summaryContent-14 Mui-expanded accordionStyles-summaryExpanded-13"
                >
                  <h6
                    class="MuiTypography-root Typography MuiTypography-h6"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded accordionStyles-summaryExpanded-13 MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-entered"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details"
                      >
                        <div>
                          <table
                            class="MuiTable-root Table Table--row-even-color Table--no-border"
                          >
                            <tbody
                              class="MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200 in
                                </td>
                              </tr>
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200 in
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when Multiple classifications provided With no feature units 1`] = `
<div>
  <div
    class="MuiGrid-root LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div
            class="accordionStyles-root-1 accordionStyles-no-inner-padding-4"
          >
            <div
              class="MuiPaper-root MuiAccordion-root accordionStyles-item-2 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-5 Mui-expanded accordionStyles-summaryExpanded-6"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content accordionStyles-summaryContent-7 Mui-expanded accordionStyles-summaryExpanded-6"
                >
                  <h6
                    class="MuiTypography-root Typography MuiTypography-h6"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded accordionStyles-summaryExpanded-6 MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-entered"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details"
                      >
                        <div>
                          <table
                            class="MuiTable-root Table Table--row-even-color Table--no-border"
                          >
                            <tbody
                              class="MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200 
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiAccordion-root accordionStyles-item-2 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-5 Mui-expanded accordionStyles-summaryExpanded-6"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content accordionStyles-summaryContent-7 Mui-expanded accordionStyles-summaryExpanded-6"
                >
                  <h6
                    class="MuiTypography-root Typography MuiTypography-h6"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded accordionStyles-summaryExpanded-6 MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-entered"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details"
                      >
                        <div>
                          <table
                            class="MuiTable-root Table Table--row-even-color Table--no-border"
                          >
                            <tbody
                              class="MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200 
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when One classifications provided With a feature units 1`] = `
<div>
  <div
    class="MuiGrid-root LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div>
            <table
              class="MuiTable-root Table Table--row-even-color"
            >
              <thead
                class="MuiTableHead-root ColorPair ColorPair--pearl"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    systemAttributes
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                  >
                    feature1
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                  >
                    200 in
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when One classifications provided With no feature units 1`] = `
<div>
  <div
    class="MuiGrid-root LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div>
            <table
              class="MuiTable-root Table Table--row-even-color"
            >
              <thead
                class="MuiTableHead-root ColorPair ColorPair--pearl"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    systemAttributes
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                  >
                    feature1
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                  >
                    200 
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
